--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri=mongodb://${db:orders-db}:27017/data
-spring.application.name=orders
+spring.data.mongodb.uri=mongodb://${db:cart-db}:27017/data
+spring.application.name=cart
 endpoints.health.enabled=false
 # Disable actuator metrics endpoints
 endpoints.metrics.enabled=false
