--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ endpoints.health.enabled=false
 # Disable actuator metrics endpoints
 endpoints.metrics.enabled=false
 server.port = 8094
+logging.level.org.apache.http=DEBUG
