--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.data.mongodb.uri=mongodb://localhost:32768/data
+spring.data.mongodb.uri=mongodb://${db:cart-db}:27017/data
 spring.application.name=cart
 endpoints.health.enabled=false
 # Disable actuator metrics endpoints
 endpoints.metrics.enabled=false
-server.port = 8094
+#server.port = 8094
 logging.level.org.apache.http=DEBUG
