--- a/deployment/cart-db-service.yaml
+++ b/deployment/cart-db-service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cart-db
   labels:
     name: cart-db
-  namespace: default
+  namespace: microshop
 spec:
   ports:
     # the port that this service should serve on
