--- a/deployment/cart-db-deployment.yaml
+++ b/deployment/cart-db-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cart-db
   labels:
     name: cart-db
-  namespace: default
+  namespace: microshop
 spec:
   replicas: 1
   template:
